# Embedded_Systems_Ensc_351

as1-reaction_timer/ass1/app/: CMakeLists.txt
as1-reaction_timer/ass1/app/src/: reaction_timer.c
as1-reaction_timer/ass1/hal/: CMakeLists.txt
as1-reaction_timer/ass1/hal/include/hal/: joystick.h  led.h
as1-reaction_timer/ass1/hal/src/: joystick.c  led.c
beagle side/: CMakeLists.txt  main
beagle side/app/: CMakeLists.txt
beagle side/app/src/: main.c
beagle side/hal/: CMakeLists.txt
beagle side/hal/include/: PWM0.h  rotary.h  servo.h
beagle side/hal/src/: PWM0.c  rotary.c  servo.c
host side/ml/: capture_three_photos_vm.py  host_main_server.py  predict_and_send_udp.py  predict_best_of_3.py  prediction_output.txt  send_result_udp.py  test_model.py
